--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "gulp-concat": "",
     "gulp-cssnano": "",
     "gulp-imagemin": "",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "",
     "gulp-sass": "",
-    "gulp-uglify": "",
     "gulp-watch": "^4.3.8",
     "vinyl-source-stream": ""
   }
