--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Xx",
   "license": "ISC",
   "devDependencies": {
-    "babel-preset-es2015": "",
+    "babel-preset-es2015": "^6.13.2",
     "browser-sync": "^2.13.0",
     "browserify": "",
     "del": "",
@@ -25,6 +25,12 @@
     "gulp-sass": "",
     "gulp-watch": "^4.3.8",
     "node-sass": "^3.8.0",
+    "rollup-plugin-babel": "^2.6.1",
     "vinyl-source-stream": ""
+  },
+  "dependencies": {
+    "rollup": "^0.34.10",
+    "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-uglify": "^1.0.1"
   }
 }
